[project]
name = "number-circles"
version = "0.1.0"
description = "Visualizations of number circles expressing factors."
authors = [{name = "Max Joseph", email = "maxwellbjoseph@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.0.0", 
    "numpy>=1.0.0",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.8"
ipykernel = ">=6.30.1,<7"
